--- a/AgamaIslam/islam.html
+++ b/AgamaIslam/islam.html
@@ -153,8 +153,8 @@
                                         ,<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Kabupaten Pati
                                         ,<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Jawa Tengah, Indonesia
                                     </li>
-                                    <li><i class="fa fa-phone"></i>&nbsp; 081802096953</li>
-                                    <li><i class="fa fa-envelope"></i> rizkymuu5@gmail.com</li>
+                                    <li><i class="fa fa-phone"></i>&nbsp; 089669493533</li>
+                                    <li><i class="fa fa-envelope"></i> dimasputramawardi240@gmail.com</li>
                                 </ul>
                             </div>
                         </div>
