--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
         <!-- Begin text carousel intro section -->
         <section id="text-carousel-intro-section" class="parallax" data-stellar-background-ratio="0.5"
-            style="background-image: url(img/background.jpg ">
+            style="background-image: url(img/background.jpg) ">
 
             <div class="container">
                 <div class="caption text-center text-white" data-stellar-ratio="0.7">
@@ -163,7 +163,7 @@
                                 <span class="rotate-box-icon"><i class="fa fa-users"></i></span>
                                 <div class="rotate-box-info">
                                     <h4>Siapa Saya?</h4>
-                                    <p>Nama saya Saiful Amin Rizki mahasiswa dari Universitas PGRI Semarang</p>
+                                    <p>Nama saya Dimas Putra Mawardi mahasiswa dari Universitas PGRI Semarang</p>
                                 </div>
                             </a>
                         </div>
@@ -313,8 +313,8 @@
                                         ,<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Kabupaten Pati
                                         ,<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Jawa Tengah, Indonesia
                                     </li>
-                                    <li><i class="fa fa-phone"></i>&nbsp; 081802096953</li>
-                                    <li><i class="fa fa-envelope"></i> rizkymuu5@gmail.com</li>
+                                    <li><i class="fa fa-phone"></i>&nbsp; 089669493533</li>
+                                    <li><i class="fa fa-envelope"></i> dimasputramawardi240@gmail.com</li>
                                 </ul>
                             </div>
                         </div>
@@ -394,7 +394,7 @@
             <div class="footer">
                 <div class="container text-center wow fadeIn" data-wow-delay="0.4s">
                     <p class="copyright">Copyright &copy; 2015 - Designed By <a href="https://www.behance.net/poljakova"
-                            class="theme-author">Saiful Amin Rizki</a>
+                            class="theme-author">Dimas Putra Mawardi</a>
                         &amp; Developed by <a href="http://www.imransdesign.com/" class="theme-author">Imransdesign</a>
                     </p>
                 </div>
